--- a/image.yaml
+++ b/image.yaml
@@ -1,8 +1,9 @@
+schema_version: 1
+
 name: "jboss-kieserver-6/kieserver63-openshift"
 version: "1.5"
 from: "jboss-eap-6/eap64-openshift:1.6"
 description: "Base image supporting `jboss-decisionserver-6/decisionserver63-openshift`. This is not currently released or supported as an independent image for end-users."
-user: 185
 labels:
     - name: "io.k8s.description"
       value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.3."
@@ -127,47 +128,37 @@ envs:
       description: "OpenShift KIE Server integration version."
 ports:
     - value: 8778
-cmd:
-    - "/opt/eap/bin/kieserver-launch.sh"
-sources:
-    - artifact: jboss-bpmsuite-6.3.0.GA-deployable-eap6.x.zip
+modules:
+      repositories:
+          - git:
+                  url: https://github.com/jboss-openshift/cct_module.git
+                  ref: master
+      install:
+          - name: os-kieserver-launch
+          - name: os-kieserver-launch
+          - name: os-kieserver-probes
+          - name: os-kieserver-s2i
+          - name: os-kieserver-webapp
+          - name: os-kieserver-chmod
+          - name: os-java-run
+artifacts:
+    - path: jboss-bpmsuite-6.3.0.GA-deployable-eap6.x.zip
       md5: 4e283717b0f295adf7025971065d6db8
-    - artifact: jboss-bpmsuite-6.3.0.GA-supplementary-tools.zip
+    - path: jboss-bpmsuite-6.3.0.GA-supplementary-tools.zip
       md5: b3d135e2d297f1e89d9ff8357c1e9aac
-    - artifact: jboss-bpmsuite-6.3.4-patch.zip
+    - path: jboss-bpmsuite-6.3.4-patch.zip
       md5: cad655ea839f9547ca7a0f689cf48b7c
-    - artifact: openshift-kieserver-common-1.1.0.Final-redhat-1.jar
+    - path: openshift-kieserver-common-1.1.0.Final-redhat-1.jar
       md5: 515c07376a14da356e82acf1854b0266
-    - artifact: openshift-kieserver-jms-1.1.0.Final-redhat-1.jar
+    - path: openshift-kieserver-jms-1.1.0.Final-redhat-1.jar
       md5: 23363d5c2e728f4c560d9e0149626dd5
-    - artifact: openshift-kieserver-web-1.1.0.Final-redhat-1.jar
+    - path: openshift-kieserver-web-1.1.0.Final-redhat-1.jar
       md5: 400cc13cdc0bd2d6504f1692b0dfd198
-dogen:
-    version: 2.4.3
-    plugins:
-        dist_git:
-            repo: jboss-kieserver-6-docker
+run:
+      user: 185
+      cmd:
+          - "/opt/eap/bin/kieserver-launch.sh"
+osbs:
+      repository:
+            name: jboss-kieserver-6-docker
             branch: ce-1.5-openshift-kieserver-6.3-jdk-8-rhel-7
-        cct:
-            verbose: true
-cct:
-    - name: EAP
-      modules:
-          - url: https://github.com/jboss-openshift/cct_module.git
-      changes:
-          - cct_module.os-kieserver-launch:
-                - prepare_sh:
-          - cct_module.os-kieserver-launch:
-                - user: 185
-                - configure_sh:
-          - cct_module.os-kieserver-probes:
-                - prepare_sh:
-          - cct_module.os-kieserver-s2i:
-                - prepare_sh:
-          - cct_module.os-kieserver-webapp:
-                - user: 185
-                - configure_sh:
-          - cct_module.os-kieserver-chmod:
-                - run:
-          - cct_module.os-java-run:
-                - install_as_root:
