[CLOUD-2139] Upgrade Maven to 3.5
Signed-off-by: Kyle Liberti <kliberti@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -141,6 +141,7 @@ modules:
           - name: os-kieserver-webapp
           - name: os-kieserver-chmod
           - name: os-java-run
+          - name: jboss-maven
 packages:
       repositories:
           - jboss-os
