--- a/image.yaml
+++ b/image.yaml
@@ -1,12 +1,12 @@
 schema_version: 1
 
-name: "jboss-kieserver-6/kieserver64-openshift"
+name: "jboss-kieserver-6/kieserver64-eap70-openshift"
 version: "1.3"
-from: "jboss-eap-6/eap64-openshift:1.7"
+from: "jboss-eap-7/eap70-openshift:1.8"
 description: "Base image supporting `jboss-decisionserver-6/decisionserver64-openshift`. This is not currently released or supported as an independent image for end-users."
 labels:
     - name: "io.k8s.description"
-      value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.4."
+      value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.4 on top of JBoss EAP 7.0.x."
     - name: "io.k8s.display-name"
       value: "JBoss BxMS KIE Server 6.4"
     - name: "io.openshift.tags"
@@ -121,7 +121,7 @@ envs:
       value: "6.4.0.GA"
       description: "BPM Suite base installation version."
     - name: "BPMSUITE_PATCH_VERSION"
-      value: "6.4.7"
+      value: "6.4.8"
       description: "BPM Suite patch upgrade version."
     - name: "OPENSHIFT_KIESERVER_VERSION"
       value: "1.2.0.Final-redhat-1"
@@ -148,12 +148,12 @@ packages:
       install:
           - PyYAML
 artifacts:
-    - path: jboss-bpmsuite-6.4.0.GA-deployable-eap6.x.zip
-      md5: 5621266e64f6ae1d6740940ec279a1ff
-    - path: jboss-bpmsuite-6.4.0.GA-supplementary-tools.zip
-      md5: 423bbcbaaa487e7437785b077c4847e5
-    - path: jboss-bpmsuite-6.4.7-patch.zip
-      md5: d8187a87a91ac4f09aff85e9f7273e3d
+    - path: jboss-bpmsuite-6.4.0.GA-deployable-eap7.x.zip
+      md5: a3d28eaf23495cb37e9ecd136dfb0c2d
+    - path: jboss-brms-bpmsuite-6.4.8.GA-supplementary-tools.zip
+      md5: ba48ae3c9246e754a442c11cf253aaa2
+    - path: jboss-bpmsuite-6.4.8-patch.zip
+      md5: 022b0f83cac3d617c173c6d1f8a4b019
     - path: openshift-kieserver-common-1.2.0.Final-redhat-1.jar
       md5: 4eee0a1e2c0970362ffe65da45b44b1c
     - path: openshift-kieserver-jms-1.2.0.Final-redhat-1.jar
@@ -168,3 +168,4 @@ osbs:
       repository:
             name: jboss-kieserver-6-docker
             branch: ce-1.3-openshift-kieserver-6.4-jdk-8-rhel-7
+
