--- a/image.yaml
+++ b/image.yaml
@@ -1,17 +1,93 @@
 schema_version: 1
 
-name: "jboss-kieserver-6/kieserver64-openshift"
+name: "jboss-kieserver-6/kieserver64-eap70-openshift"
 version: "1.3"
-from: "jboss-eap-6/eap64-openshift:1.7"
-description: "Base image supporting `jboss-decisionserver-6/decisionserver64-openshift`. This is not currently released or supported as an independent image for end-users."
+from: "jboss-eap-7/eap70:7.0.9"
+description: "Base image supporting `jboss-decisionserver-6/decisionserver64-eap70-openshift` and `jboss-decisionserver-6/processserver64-eap70-openshift`. This is not currently released or supported as an independent image for end-users."
 labels:
+    - name: "com.redhat.component"
+      value: "jboss-kieserver-6-kieserver64-eap70-openshift-container"
     - name: "io.k8s.description"
-      value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.4."
+      value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.4 on top of JBoss EAP 7.0.x."
     - name: "io.k8s.display-name"
       value: "JBoss BxMS KIE Server 6.4"
     - name: "io.openshift.tags"
       value: "builder,kieserver,kieserver6"
+    - name: "io.openshift.s2i.scripts-url"
+      value: "image:///usr/local/s2i"
 envs:
+    - name: "STI_BUILDER"
+      value: "jee"
+    - name: "JBOSS_MODULES_SYSTEM_PKGS"
+      value: "org.jboss.logmanager,jdk.nashorn.api"
+    - name: "DEFAULT_ADMIN_USERNAME"
+      value: "eapadmin"
+    - name: "JAVA_OPTS_APPEND"
+      example: "-Dfoo=bar"
+      description: "Server startup options."
+    - name: "JBOSS_MODULES_SYSTEM_PKGS_APPEND"
+      example: "org.jboss.byteman"
+      description: "Comma-separated list of package names that will be appended to the JBOSS_MODULES_SYSTEM_PKGS environment variable."
+    - name: "MQ_SIMPLE_DEAFAULT_PHYSICAL_DESTINATION"
+      example: "false"
+      description: "For backwards compatability, set to true to use 'MyQueue' and 'MyTopic' as physical destination name defaults instead of 'queue/MyQueue' and 'topic/MyTopic'."
+    - name: "DEFAULT_JMS_CONNECTION_FACTORY"
+      example: "java:jboss/DefaultJMSConnectionFactory"
+      description: "Specify the default JNDI binding for the JMS connection factory (jms-connection-factory='java:jboss/DefaultJMSConnectionFactory')."
+    - name: "CLI_GRACEFUL_SHUTDOWN"
+      example: "true"
+      description: "If set to any non zero length value then the image will prevent shutdown with the TERM signal and will require execution of the shutdown command through jboss-cli."
+    - name: "SCRIPT_DEBUG"
+      example: "true"
+      description: "If set to true, ensurses that the bash scripts are executed with the -x option, printing the commands and their arguments as they are executed."
+    - name: "JAVA_MAX_MEM_RATIO"
+      example: "50"
+      description: "This is used to calculate a default maximal heap memory based on a containers restriction. If used in a container without any memory constraints for the container then this option has no effect. If there is a memory constraint then `-Xmx` is set to a ratio of the container available memory as set here. The default is `50` which means 50% of the available memory is used as an upper boundary. You can skip this mechanism by setting this value to `0` in which case no `-Xmx` option is added."
+    - name: "JAVA_INITIAL_MEM_RATIO"
+      example: "100"
+      description: "This is used to calculate a default initial heap memory based the maximal heap memory.  The default is `100` which means 100% of the maximal heap is used for the initial heap size.  You can skip this mechanism by setting this value to `0` in which case no `-Xms` option is added."
+    - name: "JAVA_MAX_INITIAL_MEM"
+      example: "4096"
+      description: "The maximum size of the initial heap memory, if the calculated default initial heap is larger then it will be capped at this value.  The default is 4096 MB."
+    - name: "JAVA_CORE_LIMIT"
+      example: "2"
+      description: "Core limit as described in https://www.kernel.org/doc/Documentation/scheduler/sched-bwc.txt.  Used to configure the number of GC threads and parallelism for ForkJoinPool.  Defaults to container core limit."
+    - name: "JAVA_DIAGNOSTICS"
+      example: "true"
+      description: "Set this to get some diagnostics information to standard output when things are happening. **Disabled by default.**"
+    - name: "GC_MIN_HEAP_FREE_RATIO"
+      example: "20"
+      description: "Minimum percentage of heap free after GC to avoid expansion."
+    - name: "GC_MAX_HEAP_FREE_RATIO"
+      example: "40"
+      description: "Maximum percentage of heap free after GC to avoid shrinking."
+    - name: "GC_TIME_RATIO"
+      example: "4"
+      description: "Specifies the ratio of the time spent outside the garbage collection (for example, the time spent for application execution) to the time spent in the garbage collection."
+    - name: "GC_ADAPTIVE_SIZE_POLICY_WEIGHT"
+      example: "90"
+      description: "The weighting given to the current GC time versus previous GC times."
+    - name: "GC_MAX_METASPACE_SIZE"
+      example: "100"
+      description: "The maximum metaspace size."
+    - name: "CUSTOM_INSTALL_DIRECTORIES"
+      example: "custom,shared"
+      description: "A list of comma-separated directories used for installation and configuration of artifacts for the image during the S2I process."
+    - name: "CONTAINER_HEAP_PERCENT"
+      example: "0.5"
+      description: "Deprecated.  See JAVA_MAX_MEM_RATIO."
+    - name: "INITIAL_HEAP_PERCENT"
+      example: "0.5"
+      description: "Deprecated.  See JAVA_INITIAL_MEM_RATIO."
+    - name: "PROBE_DISABLE_BOOT_ERRORS_CHECK"
+      example: "true"
+      description: "Disable the boot errors check in the probes."
+    - name: "ENABLE_ACCESS_LOG"
+      example: "true"
+      description: "Enable the Access Log."
+    - name: "ENABLE_JSON_LOGGING"
+      example: "true"
+      description: "Enable JSON-formatted logging"
     - name: "KIE_CONTAINER_DEPLOYMENT"
       example: "containerId=groupId:artifactId:version|c2=g2:a2:v2'"
       description: "The KIE Containers to deploy. (optional)"
@@ -121,12 +197,14 @@ envs:
       value: "6.4.0.GA"
       description: "BPM Suite base installation version."
     - name: "BPMSUITE_PATCH_VERSION"
-      value: "6.4.7"
+      value: "6.4.9"
       description: "BPM Suite patch upgrade version."
     - name: "OPENSHIFT_KIESERVER_VERSION"
-      value: "1.2.0.Final-redhat-1"
+      value: "1.3.0.Final-redhat-1"
       description: "OpenShift KIE Server integration version."
 ports:
+    - value: 8080
+    - value: 8443
     - value: 8778
 modules:
       repositories:
@@ -137,38 +215,71 @@ modules:
               url: https://github.com/jboss-container-images/jboss-kie-modules.git
               ref: master
       install:
-          - name: os.kieserver.launch
+          - name: dynamic-resources
+          - name: s2i-common
+          - name: java-alternatives
+          - name: os-eap7-openshift
+          - name: os-eap-s2i
+          - name: os-java-jolokia
+          - name: jolokia
+          - name: os-eap7-openshift
+          - name: os-eap70-openshift
+          - name: os-eap7-modules
+          - name: os-eap70-modules
+          - name: os-eap7-ping
+          - name: os-eap-activemq-rar
+          - name: os-java-run
+          - name: os-eap-launch
+          - name: os-eap7-launch
+          - name: os-eap-logging
+          - name: os-eap-probes
+          - name: jboss-maven
+          - name: os-eap-db-drivers
+          - name: os-eap-sso
+          - name: os-eap70-sso
+          - name: os-java-hawkular
+          - name: os-eap70-hawkular
+          - name: os-eap-hawkular
+          - name: os-eap-deployment-scanner
+          - name: os-eap-extensions
+          - name: openshift-layer
+          - name: openshift-passwd
+          - name: os-logging
           - name: os.kieserver.launch
           - name: os.kieserver.probes
           - name: os.kieserver.s2i
           - name: os.kieserver.webapp
           - name: os.kieserver.chmod
-          - name: os-java-run
-          - name: jboss-maven
 packages:
       repositories:
           - jboss-os
           - jboss-rhscl
       install:
-          - PyYAML
+          - rh-mongodb32-mongo-java-driver
+          - postgresql-jdbc
+          - mysql-connector-java
+          - rh-maven33
+          - hostname
+          - python-requests
+          - python-enum34
 artifacts:
-    - path: jboss-bpmsuite-6.4.0.GA-deployable-eap6.x.zip
-      md5: 5621266e64f6ae1d6740940ec279a1ff
-    - path: jboss-bpmsuite-6.4.0.GA-supplementary-tools.zip
-      md5: 423bbcbaaa487e7437785b077c4847e5
-    - path: jboss-bpmsuite-6.4.7-patch.zip
-      md5: d8187a87a91ac4f09aff85e9f7273e3d
-    - path: openshift-kieserver-common-1.2.0.Final-redhat-1.jar
-      md5: 4eee0a1e2c0970362ffe65da45b44b1c
-    - path: openshift-kieserver-jms-1.2.0.Final-redhat-1.jar
-      md5: eb4d17234c5f949503082872e0d9601e
-    - path: openshift-kieserver-web-1.2.0.Final-redhat-1.jar
-      md5: 86ef6f335f8d0a3779c0781a154f09b7
+    - path: jboss-bpmsuite-6.4.0.GA-deployable-eap7.x.zip
+      md5: a3d28eaf23495cb37e9ecd136dfb0c2d
+    - path: jboss-bpmsuite-6.4.9.GA-supplementary-tools.zip
+      md5: 0b6add72be1cd04c361b1d04ecc43779
+    - path: jboss-bpmsuite-6.4.9-patch.zip
+      md5: a24267deef7ace526c48c9ad8dae424d
+    - path: openshift-kieserver-common-1.3.0.Final-redhat-1.jar
+      md5: 22c7fa6adedc0c0ba1e8ff54f9ea57fd
+    - path: openshift-kieserver-jms-1.3.0.Final-redhat-1.jar
+      md5: 21234d8df9e0bce07b38d4ad6b01fc1a
+    - path: openshift-kieserver-web-1.3.0.Final-redhat-1.jar
+      md5: 9dbb2b125efbb692cabf614a670d7ca8
 run:
       user: 185
       cmd:
           - "/opt/eap/bin/kieserver-launch.sh"
 osbs:
       repository:
-            name: jboss-kieserver-6-docker
-            branch: ce-1.3-openshift-kieserver-6.4-jdk-8-rhel-7
+            name: containers/jboss-kieserver-6
+            branch: jb-kieserver-6.4-eap70-rhel-7
