--- a/image.yaml
+++ b/image.yaml
@@ -131,8 +131,11 @@ ports:
 modules:
       repositories:
           - git:
-                  url: https://github.com/jboss-openshift/cct_module.git
-                  ref: master
+              url: https://github.com/jboss-openshift/cct_module.git
+              ref: master
+          - git:
+              url: https://github.com/jboss-container-images/jboss-kie-modules.git
+              ref: master
       install:
           - name: os-kieserver-launch
           - name: os-kieserver-launch
