--- a/image.yaml
+++ b/image.yaml
@@ -137,12 +137,12 @@ modules:
               url: https://github.com/jboss-container-images/jboss-kie-modules.git
               ref: master
       install:
-          - name: os-kieserver-launch
-          - name: os-kieserver-launch
-          - name: os-kieserver-probes
-          - name: os-kieserver-s2i
-          - name: os-kieserver-webapp
-          - name: os-kieserver-chmod
+          - name: os.kieserver.launch
+          - name: os.kieserver.launch
+          - name: os.kieserver.probes
+          - name: os.kieserver.s2i
+          - name: os.kieserver.webapp
+          - name: os.kieserver.chmod
           - name: os-java-run
           - name: jboss-maven
 packages:
