--- a/image.yaml
+++ b/image.yaml
@@ -171,4 +171,4 @@ run:
 osbs:
       repository:
             name: jboss-kieserver-6-docker
-            branch: ce-1.3-openshift-kieserver-6.4-jdk-8-rhel-7
+            branch: jb-kieserver-6.4-rhel-7
