--- a/image.yaml
+++ b/image.yaml
@@ -5,6 +5,8 @@ version: "1.2"
 from: "jboss-eap-6/eap64-openshift:1.7"
 description: "Base image supporting `jboss-decisionserver-6/decisionserver64-openshift`. This is not currently released or supported as an independent image for end-users."
 labels:
+    - name: "com.redhat.component"
+      value: "jboss-kieserver-6-kieserver64-openshift-container"
     - name: "io.k8s.description"
       value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.4."
     - name: "io.k8s.display-name"
@@ -166,5 +168,5 @@ run:
           - "/opt/eap/bin/kieserver-launch.sh"
 osbs:
       repository:
-            name: jboss-kieserver-6-docker
-            branch: ce-1.2-openshift-kieserver-6.4-jdk-8-rhel-7
+            name: containers/jboss-kieserver-6
+            branch: jb-kieserver-6.4-rhel-7
