[CLOUD-2455] - ERROR IJ000315: Pool amq-ConnectionFactory has 1 active handles
Signed-off-by: Filippe Spolti <fspolti@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -22,6 +22,9 @@ envs:
       value: "org.jboss.logmanager,jdk.nashorn.api"
     - name: "DEFAULT_ADMIN_USERNAME"
       value: "eapadmin"
+    - name: "RA_TRACKING"
+      value: "false"
+      description: "Disable tracking of unclosed resources for resource adapter."
     - name: "JAVA_OPTS_APPEND"
       example: "-Dfoo=bar"
       description: "Server startup options."
