--- a/image.yaml
+++ b/image.yaml
@@ -134,7 +134,7 @@ modules:
       repositories:
           - git:
               url: https://github.com/jboss-openshift/cct_module.git
-              ref: master
+              ref: sprint-16
           - git:
               url: https://github.com/jboss-container-images/jboss-kie-modules.git
               ref: master
