--- a/image.yaml
+++ b/image.yaml
@@ -25,7 +25,7 @@ envs:
       description: "Whether KIE Container alias ids will be redirected to generated deployment ids. (optional)"
     - name: "KIE_JACKSON_DESERIALIZATION_WHITELIST"
       example: "foo.bar.package,bar.foo.package"
-      description: "To protect EAP 6.4 from jackson databind deserialization vulnerabilities (CVE-2017-15095, CVE-2017-17485, CVE-2018-7489) it is possible to configure a whitelist of classes that can be serialised/deserialised. (optional)"
+      description: "To protect EAP 6.4 from jackson databind deserialization vulnerabilities (CVE-2017-15095, CVE-2017-17485, CVE-2018-7489) it is recommended to configure a whitelist of classes that can be serialised/deserialised. (optional)"
     - name: "KIE_SERVER_BPM_DISABLED"
       example: "false"
       description: "Whether to disable the BPM capability. (optional)"
