[CLOUD-3065] Move base layer of RHBA 6.4 images from jboss-eap-6/eap64-openshift:1.8 to rhel7:7-released
Signed-off-by: David Ward <dward@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+*~
+atlassian*
+.checkstyle
+*.class
+.classpath
+deployments
+.DS_Store
+*.ear
+.factorypath
+.fbExcludeFilterFile
+hs_err_pid*
+.idea/
+*.iml
+*.ipr
+*.iws
+*.jar
+.metadata/
+.mtj.tmp/
+my*.json
+my*.yaml
+.project
+.settings/
 target
+target/
+venv/
+*.war
