--- a/image.yaml
+++ b/image.yaml
@@ -1,177 +1,49 @@
 schema_version: 1
 
 name: "jboss-kieserver-6/kieserver64-openshift"
+description: "JBoss BxMS KIE Server 6.4 image not currently released or supported for end-users."
 version: "1.4"
-from: "jboss-eap-6/eap64-openshift:1.8"
-description: "Base image supporting `jboss-decisionserver-6/decisionserver64-openshift`. This is not currently released or supported as an independent image for end-users."
+from: "rhel7:7-released"
 labels:
     - name: "com.redhat.component"
       value: "jboss-kieserver-6-kieserver64-openshift-container"
     - name: "io.k8s.description"
-      value: "Base platform for executing business rules and processes on JBoss BxMS KIE Server 6.4."
+      value: "Platform for executing business rules and processes on JBoss BxMS KIE Server 6.4."
     - name: "io.k8s.display-name"
       value: "JBoss BxMS KIE Server 6.4"
     - name: "io.openshift.tags"
-      value: "builder,kieserver,kieserver6"
+      value: "builder,javaee,eap,eap6,kieserver,kieserver6"
 envs:
-    - name: "KIE_CONTAINER_DEPLOYMENT"
-      example: "containerId=groupId:artifactId:version|c2=g2:a2:v2'"
-      description: "The KIE Containers to deploy. (optional)"
-    - name: "KIE_CONTAINER_DEPLOYMENT_OVERRIDE"
-      example: "containerId=groupId:artifactId:version|c2=g2:a2:v2'"
-      description: "Used to override application template KIE_CONTAINER_DEPLOYMENT from .sti/environment. (optional)"
-    - name: "KIE_CONTAINER_REDIRECT_ENABLED"
-      example: "true"
-      description: "Whether KIE Container alias ids will be redirected to generated deployment ids. (optional)"
-    - name: "KIE_JACKSON_DESERIALIZATION_WHITELIST"
-      example: "foo.bar.package,bar.foo.package"
-      description: "To protect EAP 6.4 from jackson databind deserialization vulnerabilities (CVE-2017-15095, CVE-2017-17485, CVE-2018-7489) it is recommended to configure a whitelist of classes that can be serialised/deserialised. (optional)"
-    - name: "KIE_SERVER_BPM_DISABLED"
-      example: "false"
-      description: "Whether to disable the BPM capability. (optional)"
-    - name: "KIE_SERVER_BPM_UI_DISABLED"
-      example: "false"
-      description: "Whether to disable the BPM UI capability. (optional)"
-    - name: "KIE_SERVER_BRM_DISABLED"
-      example: "false"
-      description: "Whether to disable the BRM capability. (optional)"
-    - name: "KIE_SERVER_BRP_DISABLED"
-      example: "false"
-      description: "Whether to disable the BRP capability. (optional)"
-    - name: "KIE_SERVER_DOMAIN"
-      example: "other"
-      description: "JAAS LoginContext domain that shall be used to authenticate users when using JMS. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_POOL_SIZE"
-      example: "1"
-      description: "BPM Executor pool size. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_RETRY_COUNT"
-      example: "3"
-      description: "BPM Executor retry count. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_INTERVAL"
-      example: "3"
-      description: "BPM Executor interval. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_INITIAL_DELAY"
-      example: "100"
-      description: "BPM Executor initial delay. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_TIMEUNIT"
-      example: "SECONDS"
-      description: "BPM Executor timeunit. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_JMS"
-      example: "true"
-      description: "Whether to use JMS for BPM Executor. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_JMS_QUEUE"
-      example: "queue/KIE.SERVER.EXECUTOR"
-      description: "BPM JNDI name of executor queue for JMS. (optional)"
-    - name: "KIE_SERVER_EXECUTOR_JMS_TRANSACTED"
-      example: "false"
-      description: "Whether to transact JMS for BPM Executor. (optional)"
-    - name: "KIE_SERVER_FILTER_CLASSES"
-      example: "true"
-      description: "Whether remoteable classes in the kjar should be filtered. (optional)"
-    - name: "KIE_SERVER_HOST"
-      example: "localhost"
-      description: "The host name to access the KIE Server REST interface. (optional)"
-    - name: "KIE_SERVER_HT_CALLBACK"
-      example: "custom"
-      description: "BPM Human task callback type (mvel, ldap, db, jaas, props, custom). (optional)"
-    - name: "KIE_SERVER_HT_CUSTOM_CALLBACK"
-      example: "org.custom.MyUserGroupCallback"
-      description: "BPM Human task custom callback class (implements UserGroupCallback). (optional)"
-    - name: "KIE_SERVER_HT_USERINFO"
-      example: "custom"
-      description: "BPM Human task UserInfo type (ldap, db, props, custom). (optional)"
-    - name: "KIE_SERVER_HT_CUSTOM_USERINFO"
-      example: "org.custom.MyUserInfo"
-      description: "BPM Human task custom userinfo class (implements UserInfo). (optional)"
-    - name: "KIE_SERVER_ID"
-      example: "kieserver"
-      description: "The KIE Server identifier. (optional)"
-    - name: "KIE_SERVER_JMS_QUEUES_REQUEST"
-      example: "queue/KIE.SERVER.REQUEST"
-      description: "JNDI name of request queue for JMS. (optional)"
-    - name: "KIE_SERVER_JMS_QUEUES_RESPONSE"
-      example: "queue/KIE.SERVER.RESPONSE"
-      description: "JNDI name of response queue for JMS. (optional)"
-    - name: "KIE_SERVER_MBEANS_ENABLED"
-      example: "true"
-      description: "Whether the KIE Server JMX MBeans should be enabled. (optional)"
-    - name: "KIE_SERVER_PASSWORD"
-      example: "kieserver1!"
-      description: "The password to access the KIE Server REST or JMS interface. Must be different than username; must not be root, admin, or administrator; must contain at least 8 characters, 1 alphabetic character(s), 1 digit(s), and 1 non-alphanumeric symbol(s). (optional)"
-    - name: "KIE_SERVER_PERSISTENCE_DIALECT"
-      example: "org.hibernate.dialect.MySQL5Dialect"
-      description: "BPM Hibernate persistence dialect. (optional)"
-    - name: "KIE_SERVER_PERSISTENCE_SCHEMA"
-      example: "my.db.schema"
-      description: "BPM Hibernate persistence schema. (optional)"
-    - name: "KIE_SERVER_PERSISTENCE_DS"
-      example: "java:/jboss/datasources/ExampleDS"
-      description: "BPM Hibernate persistence datasource; will default to DB_JNDI. (optional)"
-    - name: "KIE_SERVER_PERSISTENCE_TM"
-      example: "org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform"
-      description: "BPM Hibernate persistence transaction manager. (optional)"
-    - name: "KIE_SERVER_PORT"
-      example: "8080"
-      description: "The port to access the KIE Server REST interface. (optional)"
-    - name: "KIE_SERVER_PROTOCOL"
-      example: "http"
-      description: "The protocol to access the KIE Server REST interface. (optional)"
-    - name: "KIE_SERVER_USER"
-      example: "kieserver"
-      description: "The user name to access the KIE Server REST or JMS interface. (optional)"
-    - name: "SCRIPT_DEBUG"
-      description: "If set to true, ensurses that the bash scripts are executed with the -x option, printing the commands and their arguments as they are executed."
-      example: "true"
-    - name: "CUSTOM_INSTALL_DIRECTORIES"
-      description: "A list of comma-separated directories used for installation and configuration of artifacts for the image during the S2I process."
-      example: "custom,shared"
-    - name: "BPMSUITE_BASE_VERSION"
-      value: "6.4.0.GA"
-      description: "BPM Suite base installation version."
-    - name: "BPMSUITE_PATCH_VERSION"
-      value: "6.4.11"
-      description: "BPM Suite patch upgrade version."
-    - name: "OPENSHIFT_KIESERVER_VERSION"
-      value: "1.2.2.Final-redhat-1"
-      description: "OpenShift KIE Server integration version."
-ports:
-    - value: 8778
+    - name: "JBOSS_PRODUCT"
+      value: "kieserver"
+    - name: "JBOSS_KIESERVER_VERSION"
+      value: "6.4.11.GA"
+    - name: "PRODUCT_VERSION"
+      value: "6.4.11.GA"
 modules:
       repositories:
           - name: cct_module
             git:
-              url: https://github.com/jboss-openshift/cct_module.git
-              ref: sprint-16
+                  url: https://github.com/jboss-openshift/cct_module.git
+                  ref: master
+          - name: jboss-eap-modules
+            git:
+                  url: https://github.com/jboss-container-images/jboss-eap-modules.git
+                  ref: master
+          - name: jboss-eap-6-image
+            git:
+                  url: https://github.com/jboss-container-images/jboss-eap-6-image.git
+                  ref: eap64-dev
           - name: jboss-kie-modules
             git:
-              url: https://github.com/jboss-container-images/jboss-kie-modules.git
-              ref: master
+                  url: https://github.com/jboss-container-images/jboss-kie-modules.git
+                  ref: master
+          - path: modules
       install:
-          - name: os.kieserver.launch
-          - name: os.kieserver.probes
-          - name: os.kieserver.s2i
-          - name: os.kieserver.webapp
-          - name: os.kieserver.chmod
-artifacts:
-    - path: jboss-bpmsuite-6.4.0.GA-deployable-eap6.x.zip
-      md5: 5621266e64f6ae1d6740940ec279a1ff
-    - path: jboss-bpmsuite-6.4.11.GA-supplementary-tools.zip
-      md5: e6d8bd81a65bd7cb94fa2e03180811b7
-    - path: jboss-bpmsuite-6.4.11-patch.zip
-      md5: c6a4a7f6f323cc9c7313e9c3a68e432b
-    - path: openshift-kieserver-common-1.2.2.Final-redhat-1.jar
-      md5: 80f367a257b14794cbc94628a4226641
-    - path: openshift-kieserver-jms-1.2.2.Final-redhat-1.jar
-      md5: 1399cb6ba612803f7662d63eb6c78022
-    - path: openshift-kieserver-web-1.2.2.Final-redhat-1.jar
-      md5: b6f5cbd3c17a761f95843d0410c5bc81
-    - path: quartz-oracle-1.8.5.jar
-      md5: c42d2570f34e80ab0ed668a6c9b4dcdc
-run:
-      user: 185
-      cmd:
-          - "/opt/eap/bin/kieserver-launch.sh"
+          - name: jboss-kieserver-6
 osbs:
+      configuration:
+          container_file: container.yaml
       repository:
             name: containers/jboss-kieserver-6
             branch: jb-kieserver-6.4-rhel-7
