--- a/ce.yaml
+++ b/ce.yaml
@@ -1,5 +1,7 @@
 builds:
   # Product builds
-  - name: "jboss-kieserver-6-openshift-dev"
+  - name: "jboss-kieserver-6-openshift"
     descriptor: "image.yaml"
     product: true
+    overrides:
+      - "branch-overrides.yaml"
