--- a/modules/kieserver/module.yaml
+++ b/modules/kieserver/module.yaml
@@ -11,11 +11,12 @@ labels:
       value: "image:///usr/local/s2i"
 envs:
     - name: "BPMSUITE_BASE_VERSION"
-      value: "6.4.0.GA"
+      value: "6.4.11.GA"
       description: "BPM Suite base installation version."
-    - name: "BPMSUITE_PATCH_VERSION"
-      value: "6.4.11"
-      description: "BPM Suite patch upgrade version."
+    # no patch necessary (base version = latest)
+    # name: "BPMSUITE_PATCH_VERSION"
+    # value: ""
+    # description: "BPM Suite patch upgrade version."
     - name: "OPENSHIFT_KIESERVER_VERSION"
       value: "1.2.2.Final-redhat-1"
       description: "OpenShift KIE Server integration version."
@@ -172,30 +173,54 @@ modules:
           - name: openshift-layer
           - name: openshift-passwd
           - name: os-logging
-          - name: os-eap-node-name
-          - name: os-eap-migration
+          - name: jboss.container.eap.prometheus.config
+            version: '6.4'
           - name: os.kieserver.launch
           - name: os.kieserver.probes
           - name: os.kieserver.s2i
           - name: os.kieserver.webapp
           - name: os.kieserver.chmod
 artifacts:
-    - path: jboss-bpmsuite-6.4.0.GA-deployable-eap6.x.zip
-      md5: 5621266e64f6ae1d6740940ec279a1ff
-    - path: jboss-bpmsuite-6.4.11.GA-supplementary-tools.zip
+    - name: jboss-bpmsuite-6.4.11.GA-deployable-eap6.x.zip
+      md5: 69b29d135d598ca9037a9e51c23b22f0
+    - name: jboss-brms-bpmsuite-6.4.11.GA-supplementary-tools.zip
       md5: e6d8bd81a65bd7cb94fa2e03180811b7
-    - path: jboss-bpmsuite-6.4.11-patch.zip
-      md5: c6a4a7f6f323cc9c7313e9c3a68e432b
-    - path: openshift-kieserver-common-1.2.2.Final-redhat-1.jar
-      md5: 80f367a257b14794cbc94628a4226641
-    - path: openshift-kieserver-jms-1.2.2.Final-redhat-1.jar
-      md5: 1399cb6ba612803f7662d63eb6c78022
-    - path: openshift-kieserver-web-1.2.2.Final-redhat-1.jar
-      md5: b6f5cbd3c17a761f95843d0410c5bc81
-    - path: quartz-oracle-1.8.5.jar
-      md5: c42d2570f34e80ab0ed668a6c9b4dcdc
-    - path: jboss-bxms-6.4.11-RHBPMS-5222.zip
+    - name: jboss-bxms-6.4.11-RHBPMS-5222.zip
       md5: bb2e5dbb70bbdf4b300115e67977c940
+    - name: openshift-kieserver-common-1.2.2.Final-redhat-1.jar
+      md5: 80f367a257b14794cbc94628a4226641
+    - name: openshift-kieserver-jms-1.2.2.Final-redhat-1.jar
+      md5: 1399cb6ba612803f7662d63eb6c78022
+    - name: openshift-kieserver-web-1.2.2.Final-redhat-1.jar
+      md5: b6f5cbd3c17a761f95843d0410c5bc81
+    - name: quartz-oracle-1.8.5.jar
+      md5: c42d2570f34e80ab0ed668a6c9b4dcdc
+    ###### Other modules' artifacts made plain (with 'name') so that they can be pulled from Brew
+    # os-eap64-modules:
+    - name: tomcat-7-valves-1.0.3.Final-redhat-1.jar
+      md5: f286f6748e6d134ed0a9dadd8320ecd2
+    - name: txn-recovery-marker-jdbc-common-1.1.2.Final-redhat-00001.jar
+      md5: 252aa2b4bcded8e5bf8a7087ad7bbbeb
+    - name: txn-recovery-marker-jdbc-hibernate4-1.1.2.Final-redhat-00001.jar
+      md5: 8b6b26f587d5ef278a779ff5eef72e6c
+    # os-eap64-ping:
+    - name: openshift-ping-common-1.2.3.Final-redhat-1.jar
+      md5: 2722e17d2b230184572b9e6539195c4d
+    - name: openshift-ping-dns-1.2.3.Final-redhat-1.jar
+      md5: a87fd933f56ef7619d9ca676e7a3d208
+    - name: openshift-ping-kube-1.2.3.Final-redhat-1.jar
+      md5: 3c8e75aad63eeb5379530d1ee76a4122
+    - name: oauth-20100527.jar
+      md5: 91c7c70579f95b7ddee95b2143a49b41
+    # jboss.eap.logging.ext
+    - name: jboss-logmanager-ext-1.0.0.Alpha5-redhat-1.jar
+      md5: 3c84f54725ea5657913cf6d1610798b0
+    # jboss.container.hawkular.bash
+    - name: hawkular-javaagent-1.0.1.Final-redhat-2-shaded.jar
+      md5: f97f623e5b614a7b6d1eb5ff7158027b
+    # jboss.container.prometheus.bash
+    - name: jmx_prometheus_javaagent-0.3.1.redhat-00006.jar
+      md5: 620d5c068e4ca408ad99c244f8706fce
 packages:
       content_sets_file: content_sets.yml
       install:
