[KIECLOUD-242] references to content_sets.yml missing in 6.4 image.yaml files
Signed-off-by: David Ward <dward@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -47,6 +47,8 @@ modules:
           - path: modules
       install:
           - name: jboss-kieserver-6
+packages:
+      content_sets_file: content_sets.yml
 osbs:
       configuration:
           container_file: container.yaml
